<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>ani.rss</groupId>
        <artifactId>ani-rss</artifactId>
        <version>2.4.41</version>
    </parent>

    <artifactId>ani-rss-application</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>ani.rss</groupId>
            <artifactId>ani-rss-ui</artifactId>
        </dependency>
        <dependency>
            <groupId>ani.rss</groupId>
            <artifactId>ani-rss-web</artifactId>
        </dependency>
    </dependencies>

    <build>
        <finalName>ani-rss</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>ani.rss.ApplicationMain</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>l4j</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>target/ani-rss-launcher.exe</outfile>
                            <jar>target/ani-rss-jar-with-dependencies.jar</jar>
                            <errTitle>Java environment is required!</errTitle>
                            <cmdLine>--gui</cmdLine>
                            <chdir>.</chdir>
                            <priority>normal</priority>
                            <downloadUrl>https://adoptium.net/zh-CN/</downloadUrl>
                            <supportUrl>https://whichjdk.com/</supportUrl>
                            <stayAlive>false</stayAlive>
                            <restartOnCrash>false</restartOnCrash>
                            <icon>${project.parent.basedir}/ani-rss-ui/public/favicon.ico</icon>
                            <singleInstance>
                                <mutexName>ani-rss-launcher</mutexName>
                                <windowTitle>ani-rss</windowTitle>
                            </singleInstance>
                            <jre>
                                <path>jre/bin;%JAVA_HOME%/bin;%PATH%</path>
                                <minVersion>17</minVersion>
                                <opts>
                                    <opt>-Xms60m -Xmx1g -Xss256k</opt>
                                    <opt>--enable-native-access=ALL-UNNAMED</opt>
                                    <opt>-XX:+UseCompactObjectHeaders</opt>
                                    <opt>-XX:+IgnoreUnrecognizedVMOptions</opt>
                                    <opt>--add-opens=java.base/java.net=ALL-UNNAMED</opt>
                                    <opt>--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileDescription>https://docs.wushuo.top/</fileDescription>
                                <copyright>Copyright (C) 2024-2025</copyright>
                                <productName>${project.artifactId}</productName>
                                <internalName>${project.artifactId}</internalName>
                                <originalFilename>ani-rss-launcher.exe</originalFilename>
                                <language>SIMPLIFIED_CHINESE</language>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>generate-resources</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>bash</executable>
                            <arguments>
                                <argument>./generate-resources.sh</argument>
                            </arguments>
                            <workingDirectory>${project.basedir}</workingDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate-md5sum</id>
                        <phase>package</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>ani.rss.build.Md5Sum</mainClass>
                            <systemProperties>
                                <systemProperty>
                                    <key>basedir</key>
                                    <value>${project.basedir}</value>
                                </systemProperty>
                            </systemProperties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
